--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "lewis/cngroupupload",
+  "name": "lewisliang82/cngroupupload",
   "description": "cngroupupload",
   "keywords": ["upload"],
   "homepage": "https://github.com/lewisliang82/cngroupupload",
