--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "illuminate/config": "~5.0",
-    "illuminate/support": "~5.0"
+    "laravel/framework": "5.4.*"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0"
