--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,6 @@
   "description": "cngroupupload",
   "keywords": ["upload"],
   "homepage": "https://github.com/lewisliang82/cngroupupload",
-  "minimum-stability": "dev",
-  "version": "0.0.1",
   "license": "MIT",
   "authors": [
     {
@@ -23,5 +21,7 @@
     "psr-4": {
       "CNUpload\\Upload\\": "src/"
     }
-  }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
